feat: api build warning, permission-gated tab complete, inspection cleanup, license swap